--- a/template/app_doc/editor/create_doc.html
+++ b/template/app_doc/editor/create_doc.html
@@ -132,7 +132,7 @@
             <!-- 标题 -->
             <div style="padding-bottom:0px;">
                 <div class="layui-input-block" style="margin-left:0px;">
-                    <input type="text" name="doc-name" id="doc-name" required lay-verify="required" placeholder="请输入文档标题……" autocomplete="off" class="layui-input">
+                    <input type="text" name="doc-name" id="doc-name" required lay-verify="required" placeholder={% trans "请输入文档标题……" %} autocomplete="off" class="layui-input">
                 </div>
             </div>
             <br/>
