--- a/template/app_doc/pro_list.html
+++ b/template/app_doc/pro_list.html
@@ -225,7 +225,7 @@
 <div style="padding: 20px;display:none;" id="create-project-div">
     <div class="layui-form">
         <div class="layui-form-item">
-            <label class="layui-form-label">图标</label>
+            <label class="layui-form-label">{% trans "图标" %}</label>
             <div class="layui-input-block">
                 <button class="layui-btn layui-btn-primary layui-btn-sm" id="project-icon-select">
                     <i class="layui-icon layui-icon-addition"></i>
@@ -238,22 +238,22 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">名称</label>
+            <label class="layui-form-label">{%trans "名称" %}</label>
             <div class="layui-input-block">
-                <input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="输入文集名" required  lay-verify="required">
+                <input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={%trans "输入文集名" %} required  lay-verify="required">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">简介</label>
+            <label class="layui-form-label">{% trans "简介" %}</label>
             <div class="layui-input-block">
-                <textarea name="desc" id="desc" placeholder="输入文集简介，不超过100个字，超出将被截断"  maxlength="100" class="layui-textarea"></textarea>
+                <textarea name="desc" id="desc" placeholder={%trans "输入文集简介，不超过100个字，超出将被截断" %} maxlength="100" class="layui-textarea"></textarea>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">权限</label>
+            <label class="layui-form-label">{% trans "权限" %}</label>
             <div class="layui-input-block">
-                <input type="radio" name="project-role" value="0" title="公开" checked>
-                <input type="radio" name="project-role" value="1" title="私密">
+                <input type="radio" name="project-role" value="0" title={%trans "公开" %} checked>
+                <input type="radio" name="project-role" value="1" title={%trans "私密" %}>
             </div>
         </div>
         <div style="color:red;font-size:12px;">{% trans "*在可个人中心对文集权限进行进一步控制" %}</div>
@@ -416,7 +416,7 @@
                 title:'{% trans "修改文集" %}',
                 area:'300px;',
                 id:'createPro',//配置ID
-                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder="输入文集名" required  lay-verify="required"><textarea name="desc" id="desc" placeholder="输入文集简介" class="layui-textarea"></textarea></div>',
+                content:'<div style="padding: 20px;"><input class="layui-input" type="text" id="pname" style="margin-bottom:10px;" placeholder={%trans "输入文集名" %} required  lay-verify="required"><textarea name="desc" id="desc" placeholder={%trans "输入文集简介" %} class="layui-textarea"></textarea></div>',
                 btn:['{% trans "确定" %}','{% trans "取消" %}'], //添加按钮
                 btnAlign:'c', //按钮居中
                 yes:function (index,layero) {
@@ -447,7 +447,7 @@
                 title:'{% trans "修改密码" %}',
                 area:'300px;',
                 id:'changePwd',
-                content:'<div style="padding:10px 0 0 20px;">修改用户[' + username + ']的密码：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder="输入新密码" required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder="再次确认新密码" required  lay-verify="required"></div>',
+                content:'<div style="padding:10px 0 0 20px;"> {%trans "修改用户" %}[' + username + '] {%trans "的密码" %}：</div><div style="padding: 20px;"><input class="layui-input" type="password" id="newPwd1" style="margin-bottom:10px;" placeholder={% trans "输入新密码" %} required  lay-verify="required"><input class="layui-input" type="password" id="newPwd2" placeholder={%trans "再次确认新密码" %} required  lay-verify="required"></div>',
                 btn:['{% trans "确认修改" %}','{% trans "取消" %}'],
                 yes:function (index,layero) {
                     layer.load(1);
