--- a/template/app_doc/manage/manage_project_options.html
+++ b/template/app_doc/manage/manage_project_options.html
@@ -359,11 +359,11 @@
     delProject = function(pro_id){
         layer.open({
             type:1,
-            title:'删除文集',
+            title:%{trans "删除文集" %},
             area:'300px;',
             id:'delPro',//配置ID
-            content:'<div style="margin-left:10px;">警告：此操作将删除文集及文集下所有文档！</div>',
-            btn:['确定','取消'], //添加按钮
+            content:'<div style="margin-left:10px;">%{trans "警告：此操作将删除文集及文集下所有文档！" %}</div>',
+            btn:[%{trans "确定" %},{% trans "取消" %}], //添加按钮
             btnAlign:'c', //按钮居中
             yes:function (index,layero) {
                 layer.load(1);
@@ -394,11 +394,11 @@
     reportMd = function(pro_id){
         layer.open({
             type:1,
-            title:"导出文集",
+            title:%{trans "导出文集" %},
             area:"300px",
             id:"reportMd",
-            content:'<div style="margin-left:10px;">将此文集下所有文档导出为MD文件并打包？</div>',
-            btn:['确定','取消'], //添加按钮
+            content:'<div style="margin-left:10px;">%{trans "将此文集下所有文档导出为MD文件并打包？" %}</div>',
+            btn:[{%trans "确定" %}, %{trans "取消" %}], //添加按钮
             btnAlign:'c', //按钮居中
             yes:function (index,layero) {
                 var load = layer.load()
@@ -428,10 +428,10 @@
     downloadMd = function(download_link){
         layer.open({
             type:1,
-            title:"下载导出文档",
+            title:%{trans "下载导出文档" %},
             area:"300px",
             id:"downloadMd",
-            content:'<p style="text-align:center;color:red;">请尽快下载，避免失效！</p><br><a class="layui-btn layui-btn-fluid download-md-link" href="'+ download_link + '" download="mrdoc_report_md.zip" >点击下载文件(zip)</a>',
+            content:'<p style="text-align:center;color:red;">%{trans "请尽快下载，避免失效！"%} </p><br><a class="layui-btn layui-btn-fluid download-md-link" href="'+ download_link + '" download="mrdoc_report_md.zip" >%{trans "点击下载文件"%} (zip)</a>',
             //btn:['确定','取消'], //添加按钮
             //btnAlign:'c', //按钮居中
             success: function (layero, index) {
@@ -463,13 +463,13 @@
     var editor = editormd("editor-md", {
         width       :   "100%",
         height      :   editormd_height,
-        placeholder :   "道友，开始吧……",
+        placeholder :   %{trans "道友，开始吧……" %},
         toolbarIcons : function() {
             return editormd_toobar
         },
         //自定义工具栏添加楷体按钮
         toolbarIconTexts : {
-            kaiSpan : "楷",
+            kaiSpan : %{trans "楷" %},
         },
         //自定义工具栏添加图片按钮
         toolbarIconsClass : {
@@ -519,13 +519,13 @@
         //设置语言
         lang : {
             toolbar : {
-                kaiSpan : "添加楷体span标签",
-                imgUpload:"添加图片到文档",
-                attachment:"添加附件",
-                htmltable:"添加表格",
-                mindmap:"添加思维导图",
-                echart:"添加Echarts图表",
-                multimedia:"添加音频、视频",
+                kaiSpan : %{trans "添加楷体span标签" %},
+                imgUpload:%{trans "添加图片到文档" %},
+                attachment:%{trans "添加附件" %},
+                htmltable:%{trans "添加表格" %},
+                mindmap:%{trans "添加思维导图" %},
+                echart:%{trans "添加Echarts图表" %},
+                multimedia:%{trans "添加音频、视频" %},
             }
         },
         //配置项
