--- a/template/app_doc/share/share_doc.html
+++ b/template/app_doc/share/share_doc.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn" style="font-size: 14px;">
+<html style="font-size: 14px;">
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
