--- a/template/app_doc/tag_doc_base.html
+++ b/template/app_doc/tag_doc_base.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 <!DOCTYPE html>
-<html lang="zh-cn" style="font-size: 14px;">
+<html style="font-size: 14px;">
 <head>
     <meta charset="UTF-8">
     <meta name=renderer  content=webkit>
@@ -62,7 +62,7 @@
         <!-- 文档搜索 -->
         <form action="" method="get">
             <div id="doc-search-input">
-                <input type="text" name="kw" placeholder="输入并回车搜索" value="" class="layui-input doc-search-input">
+                <input type="text" name="kw" placeholder=%{trans "输入并回车搜索" %} value="" class="layui-input doc-search-input">
             </div>
         </form>
         <!-- 文集名称 -->
@@ -108,7 +108,7 @@
     <div class="doc-body">
         <!-- 文档导航 -->
         <div class="doc-header" role="navigation">
-            <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title="切换侧边栏">
+            <a class="btn pull-left js-toolbar-action" aria-label="" href="javascript:void(0);" title=%{ trans "切换侧边栏" %}>
                 <i class="fa fa-align-justify"></i>
             </a>
             <a class="btn pull-left font-small"  href="javascript:void(0);" title="缩小字体">
@@ -194,17 +194,17 @@
 <div id="share_div" style="display: none;">
     <div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
         <ul class="layui-tab-title">
-            <li class="layui-this">微信扫一扫</li>
-            <li>复制链接</li>
+            <li class="layui-this">%{trans "微信扫一扫" %}</li>
+            <li>%{ trans "复制链接" %}</li>
         </ul>
     <div class="layui-tab-content" style="height: 100px;">
         <div class="layui-tab-item layui-show" align='center'>
-            <p style="font-weight: 700;margin-bottom: 10px;">手机扫一扫进行分享</p>
+            <p style="font-weight: 700;margin-bottom: 10px;">%{trans "手机扫一扫进行分享" %}</p>
             <div id="url_qrcode"></div>
         </div>
         <div class="layui-tab-item" align='center'>
             <input type="text" id="copy_crt_url" name="current_url" class="layui-input" /><br>
-            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">复制链接</button>
+            <button class="layui-btn layui-btn-radius layui-btn-xs" style="background-color: #333;" onclick="copyUrl();">%{trans "复制链接" %}</button>
         </div>
     </div>
     </div> 
