--- a/template/forget_pwd.html
+++ b/template/forget_pwd.html
@@ -78,7 +78,8 @@
     function getCode(e) {
         email = document.getElementById("email");
         if(email.value.length == 0){
-           layer.msg("请输入电子邮箱");
+           //layer.msg("请输入电子邮箱");
+           layer.msg("Please enter an email")
         }else{
             if(!(/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/.test(email.value))){
                 layer.msg("电子邮箱有误，请重填")
