feat: final few fixes and this is ready to release.

--- a/template/app_doc/diff_doc.html
+++ b/template/app_doc/diff_doc.html
@@ -144,7 +144,7 @@
         });
         //切换侧边栏显示隐藏
         function toggleSidebar(){
-            console.log("切换侧边栏")
+            console.log("{%trans '切换侧边栏' %}")
             $("body").toggleClass("big-page");
             return false;
         }
