--- a/template/app_doc/manage/manage_doc.html
+++ b/template/app_doc/manage/manage_doc.html
@@ -258,7 +258,7 @@
                     success: function(r) {
                         layer.close(loading);
                         if (r.status) {
-                            layer.msg("删除成功", {
+                            layer.msg("{%trans '删除成功' %}", {
                                 icon: 1,
                                 time: 1000
                             }, function() {
