--- a/template/app_doc/manage/manage_image.html
+++ b/template/app_doc/manage/manage_image.html
@@ -114,7 +114,7 @@
                     $.post("{% url 'manage_image' %}",data,function(r){
                         layer.closeAll('loading')
                         if(r.status){
-                            layer.msg('删除成功', {
+                            layer.msg('{%trans "删除成功" %}', {
                                 icon: 1,
                                 time: 1000
                             }, function() {
