--- a/template/app_doc/search_result.html
+++ b/template/app_doc/search_result.html
@@ -283,7 +283,7 @@
             footerTop = ($(window).scrollTop() + $(window).height() - footerHeight - 35)+"px";
             //如果页面内容高度小于屏幕高度，div#footer将绝对定位到屏幕底部，否则div#footer保留它的正常静态定位
             if(($(".layui-header").height() + $(".index-control").height() + $(".project-list-content").height() + $(".project-list-page").height() + 16) < $(window).height()) {
-                console.log("页脚置底")
+                console.log("{%trans '页脚置底' %}")
                 $(".layui-footer").css({ position: "absolute",left:"0" }).stop().css({top:footerTop});
             }else{
                 $(".layui-footer").css({ position: ""})
