--- a/template/app_admin/admin_base.html
+++ b/template/app_admin/admin_base.html
@@ -40,7 +40,7 @@
 							var current_version = '{{mrdoc_version}}'
 							console.log(new_version,current_version)
 							if(new_version > current_version){
-								console.log("发现新版本")
+								console.log("{%trans '发现新版本' %}")
 								layer.open({
 									title:"{% trans '版本更新' %}",
 									content:"{% trans '觅道文档已发布新版本，请及时更新' %}",
