--- a/template/app_api/single_doc_detail.html
+++ b/template/app_api/single_doc_detail.html
@@ -544,7 +544,7 @@
         $("body").on('click','.switch-toc',SwitchToc)
     });
     function SwitchToc(i){
-        console.log("点击了")
+        console.log("{%trans '点击了' %}")
         var $me = $(this);
         $(this).parent().next("ul").toggleClass("toc-close"); //切换展开收起样式
         $(this).toggleClass("fa-chevron-left fa-chevron-down");//切换图标
