--- a/template/app_doc/editor/modify_doc.html
+++ b/template/app_doc/editor/modify_doc.html
@@ -485,7 +485,7 @@
                                                 var $me = $(this)
                                                 if($me.data('id') == obj.data.id){
                                                     // console.log('点击了')
-                                                    layer.msg("选择了上级文档："+obj.data.title)
+                                                    layer.msg("{%trans '选择了上级文档' %}："+obj.data.title)
                                                     $me.find('span.layui-tree-txt').first().addClass('selected-parent-doc')
                                                 }else{
                                                     $me.find('span.layui-tree-txt').first().removeClass('selected-parent-doc')
