--- a/template/app_doc/manage/manage_project_doc_sort.html
+++ b/template/app_doc/manage/manage_project_doc_sort.html
@@ -194,7 +194,7 @@
         $("body").on('click','.switch-toc',SwitchToc)
     });
     function SwitchToc(i){
-        console.log("点击了")
+        console.log("{%trans '点击了' %}")
         var $me = $(this);
         $(this).next("ul").toggleClass("toc-close"); //切换展开收起样式
         $(this).toggleClass("layui-icon-left layui-icon-down");//切换图标
@@ -210,13 +210,13 @@
         $.post('{% url "manage_pro_doc_sort" pro.id %}',sort_data,function(r){
             if(r.status){
                 layer.closeAll('loading')
-                layer.msg("完成文集排序",function(){
+                layer.msg("{%trans '完成文集排序' %}",function(){
                     layer.close()
                 })
                 
             }else{
                 layer.closeAll('loading')
-                layer.msg("修改导入文集出错")
+                layer.msg("{%trans '修改导入文集出错' %}")
             }
         });
     })
